--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To - QR Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="box">
         <div class="header">
             <h1>Generate QR Code</h1>
             <input type="text" placeholder="Enter Your Iformation">
-            <select id="sizes">
-                <option value="100">100x100</option>
-                <option value="200">200x200</option>
-                <option value="300">300x300</option>
-                <option value="400">400x400</option>
-                <option value="500">500x500</option>
-                <option value="600">600x600</option>
-                <option value="700">700x700</option>
-                <option value="800">800x800</option>
-                <option value="900">900x900</option>
-                <option value="1000">1000x1000</option>
-            </select>
+            <div>
+                <label for="sizes">Select Size:</label>
+                <select id="sizes">
+                    <option value="active">select size</option>
+                    <option value="100">100x100</option>
+                    <option value="200">200x200</option>
+                    <option value="300">300x300</option>
+                    <option value="400">400x400</option>
+                    <option value="500">500x500</option>
+                    <option value="600">600x600</option>
+                    <option value="700">700x700</option>
+                    <option value="800">800x800</option>
+                    <option value="900">900x900</option>
+                    <option value="1000">1000x1000</option>
+                </select>
+            </div>
         </div>
         <div class="body"></div>
-        <div class="footer"></div>
+        <div class="footer">
+            <a href="">Cenerate</a>
+            <a href="">Download</a>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
