--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="box">
         <div class="header">
             <h1>Generate QR Code</h1>
-            <input type="text" placeholder="Enter Your Iformation">
+            <input type="text" placeholder="Enter Your Iformation" id="qr-text">
             <div>
                 <label for="sizes">Select Size:</label>
                 <select id="sizes">
@@ -30,8 +30,8 @@
         </div>
         <div class="body"></div>
         <div class="footer">
-            <a href="">Cenerate</a>
-            <a href="">Download</a>
+            <a href="" id="GenerateBtn">Generate</a>
+            <a href="" id="downloadBtn">Download</a>
         </div>
     </div>
     <script src="script.js"></script>
