--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="body"></div>
         <div class="footer">
             <a href="" id="GenerateBtn">Generate</a>
-            <a href="" id="downloadBtn">Download</a>
+            <a href="qr.webp" id="downloadBtn">Download</a>
         </div>
     </div>
     <script src="script.js"></script>
