--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div>
                 <label for="sizes">Select Size:</label>
                 <select id="sizes">
-                    <option value="active">select size</option>
+                    <!-- <option value="active">select size</option> -->
                     <option value="100">100x100</option>
                     <option value="200">200x200</option>
                     <option value="300">300x300</option>
@@ -31,7 +31,7 @@
         <div class="body"></div>
         <div class="footer">
             <a href="" id="GenerateBtn">Generate</a>
-            <a href="qr.webp" id="downloadBtn">Download</a>
+            <a href="" id="downloadBtn">Download</a>
         </div>
     </div>
     <script src="script.js"></script>
